tests/fixtures/guardrails/invalid/route-reassigned-imports-domain/app/routes/products.ts
let target;
target = "~/domain/products/write.server";

export async function action() {
  return import(target);
}
